--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "connect-session-sequelize": "^7.1.7",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-handlebars": "^7.1.2",
-    "express-session": "^1.17.3",
-    "handlebars": "^4.7.8",
-    "jquery": "^3.7.1",
-    "mysql": "^2.18.1",
-    "mysql2": "^3.6.1",
-    "nodemon": "^3.0.1",
-    "sequelize": "^6.33.0"
-  }
+    "bcrypt": "^4.0.1",
+    "connect-session-sequelize": "^6.1.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
+    "express-session": "^1.17.0",
+    "mysql2": "^2.0.1",
+    "sequelize": "^5.21.2"
+  },  
+    "devDependencies": {
+      "nodemon":"^2.0.3"
+    }
+  
 }
